# praevisio

./: .praevisio.yaml  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
app/: __init__.py
docs/: #white-paper.org#  .#white-paper.md  abductio-conformance-tasks.md  abductio-white-paper.org  api.md  conf.py  examples.md  improvements.org  improvements.org~  index.md  quickstart.md  white-paper.md  white-paper.md~  white-paper.org
features/: applicability_abuse.feature  audit_pack_export.feature  chain_of_custody.feature  ci_gate.feature  computed_confidence.feature  controls_mapping.feature  decision_next_actions.feature  environment.py  evidence_collection.feature  full_tutorial_workflow.feature  hash_only_evidence_retention.feature  hypothesis_library_mismatch.feature  log_redaction_policy.feature  many_promises_one_decision.feature  offline_no_egress.feature  override_enforcement.feature  panel_robustness.feature  pass_fail_mechanisms.feature  permutation_invariance.feature  precommit_gate.feature  privacy_redaction.feature  promise_loading.feature  promise_management.feature  prompt_injection_defense.feature  rbac_audit_pack.feature  red_team_defeaters.feature  replay_determinism.feature  run_precommit.feature  staged_disclosure.feature  tamper_evident_audit_log.feature  toolchain_determinism.feature  tutorials.feature  vdr_ingestion.feature  verdict.feature  verdict_state_semantics.feature  voi_lite_next_actions.feature
logs/: ci-gate-report.json  test-config.yaml
scripts/: release.sh
tests/: test_abductio_integration.py  test_determinism.py  (+2 more)
(+142 files in other folders)
