[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "praevisio"
version = "0.0.0"
description = "A CLI tool for AI governance through verifiable promises."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Praevisio Maintainers" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "pytest>=7.4",
  "semgrep",
]

[project.urls]
Homepage = "https://example.com/"
Repository = ""

[tool.hatch.build]
packages = ["src/praevisio"]

# Optional dependency groups for uv
[dependency-groups]
docs = [
  "Sphinx>=7.0",
  "myst-parser>=2.0",
  "sphinx-rtd-theme>=2.0",
  "linkify-it-py>=2.0",
]
dev = [
  "behave>=1.2.6",
]

[project.scripts]
praevisio = "praevisio.presentation.cli:main"
